--- a/package.json
+++ b/package.json
@@ -1,6 +1,21 @@
 {
   "name": "switch-it",
   "version": "0.1.0",
+  "description": "Button switching fidget app",
+  "author": {
+    "name": "Manoj B",
+    "url": "https://manojbarman.is-a.dev"
+  },
+  "keywords": [
+    "react",
+    "howler",
+    "surge",
+    "pwa"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/itsmanojb/switch-it.git"
+  },
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
@@ -9,6 +24,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "use-sound": "^4.0.1",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.3",
     "workbox-broadcast-update": "^5.1.3",
